--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 
      <!-- Main Input For Receiving Query to our ML -->
     <form action="{{ url_for('predict')}}"method="post">
-    	<input type="text" name="Client ID" placeholder="Experience" required="required" />
+    	<input type="text" name="Client ID" placeholder="id" required="required" />
 
         <button type="submit" class="btn btn-primary btn-block btn-large">Recommend</button>
     </form>
